<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_deck"
        android:icon="@drawable/add_deck"
        android:title="@string/add_deck"
        app:showAsAction="always" />
    <item
        android:id="@+id/cal_view"
        android:icon="@drawable/calendar"
        android:title="@string/calendar_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_deck"
        android:icon="@drawable/delete"
        android:title="@string/delete_decks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort_decks"
        android:icon="@drawable/sort_decks"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom" />
</menu>