<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.CardAdder" >

    <EditText
        android:id="@+id/term_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/term"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/definition_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/definition"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_card"
        android:onClick="addCard"
        />

</LinearLayout>